swagger doc create course
