# docs/swagger.json
@@ -40,6 +40,38 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Create a new course with the input paylod",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "courses"
+                ],
+                "summary": "Create a new course",
+                "parameters": [
+                    {
+                        "description": "Create course",
+                        "name": "course",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Course"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Course"
+                        }
+                    }
+                }
             }
         },
         "/courses/": {
@@ -54,30 +86,6 @@
                     "courses"
                 ],
                 "summary": "Update a course",
-                "parameters": [
-                    {
-                        "description": "Course Data",
-                        "name": "message",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Course"
-                        }
-                    }
-                ],
-                "responses": {}
-            },
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "courses"
-                ],
-                "summary": "Add a new course",
                 "parameters": [
                     {
                         "description": "Course Data",
